# wui

./: .cliff.toml  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.cargo/: release.toml
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  publish.yml
crates/wuhu/: Cargo.toml
crates/wuhu-compress/: Cargo.toml
crates/wuhu-compress/src/: lib.rs
crates/wuhu-core/: Cargo.toml
crates/wuhu-core/src/: checkpoint.rs  event.rs  fmt.rs  hook.rs  lib.rs  memory.rs  message.rs  provider.rs  query_chain.rs  tool.rs
crates/wuhu-engine/: Cargo.toml
crates/wuhu-engine/src/: executor.rs  hooks.rs  lib.rs  permission.rs  query_chain.rs  registry.rs  run.rs  tool_search.rs
crates/wuhu-providers/: Cargo.toml
crates/wuhu-providers/src/: anthropic.rs  lib.rs  openai.rs
crates/wuhu/examples/: 01_streaming.rs  02_run.rs  03_tools.rs  04_hitl.rs  05_hooks.rs  06_session.rs  07_concurrent.rs  08_readonly.rs  09_subagent.rs  10_failure_kinds.rs  simple.rs  with_tools.rs
crates/wuhu/src/: agent.rs  builder.rs  lib.rs  session.rs
crates/wui/: Cargo.toml
crates/wui-core/: Cargo.toml
crates/wui-core/src/: catalog.rs  event.rs  fmt.rs  hook.rs  lib.rs  message.rs  provider.rs  runner.rs  tool.rs  types.rs
crates/wui-core/src/tool/: artifact.rs  input.rs  mod.rs  output.rs
crates/wui-eval/: Cargo.toml  README.md
crates/wui-eval/src/: harness.rs  lib.rs  mock_provider.rs  scenario.rs
crates/wui-macros/: Cargo.toml
crates/wui-macros/src/: lib.rs
crates/wui-mcp/: Cargo.toml  README.md
crates/wui-mcp/examples/: 01_mcp.rs
crates/wui-mcp/src/: catalog.rs  lib.rs
crates/wui-memory/: Cargo.toml  README.md
crates/wui-memory/src/: keyword_store.rs  lib.rs  semantic_tool.rs  tools.rs  traits.rs  vector.rs  vector_store.rs
crates/wui-observe/: Cargo.toml  README.md
crates/wui-observe/src/: lib.rs  stream.rs  timeline.rs
crates/wui-skills/: Cargo.toml  README.md
crates/wui-skills/src/: lib.rs
crates/wui-spawn/: Cargo.toml  README.md
crates/wui-spawn/src/: http_transport.rs  lib.rs  registry.rs  remote_tools.rs  tools.rs  transport.rs
crates/wui-workflow/: Cargo.toml  README.md
crates/wui-workflow/src/: lib.rs
crates/wui/examples/: 01_streaming.rs  02_tools.rs  03_hitl.rs  04_session.rs  05_structured.rs  06_concurrent.rs  07_checkpoint.rs
crates/wui/src/: agent.rs  builder.rs  catalog.rs  lib.rs  session.rs  structured.rs  sub_agent.rs
crates/wui/src/catalog/: mod.rs
crates/wui/src/compress/: estimator.rs  mod.rs  pipeline.rs  summarizer.rs  tests.rs
crates/wui/src/facade/: agent.rs  builder.rs  hitl_registry.rs  mod.rs  session.rs  sub_agent.rs
crates/wui/src/providers/: anthropic.rs  mod.rs  openai.rs
crates/wui/src/providers/anthropic/: mod.rs  serialize.rs  sse.rs
crates/wui/src/providers/openai/: mod.rs  parser.rs  serialize.rs
crates/wui/src/runtime/: auth.rs  checkpoint.rs  executor.rs  hooks.rs  mod.rs  permission.rs  registry.rs  run.rs  run_helpers.rs  session_store.rs  tool_search.rs
crates/wui/src/runtime/permission/: decision.rs  mod.rs  mode.rs  rules.rs  session.rs
crates/wui/src/runtime/run/: compression.rs  config.rs  history.rs  mod.rs  parsing.rs  provider.rs  state.rs  stream.rs  tests.rs  tool_batch.rs
crates/wui/tests/: integration.rs
docs/: architecture-guide.en.md  architecture-guide.zh.md  architecture.md  core-audit.md  getting-started.md  philosophy.md  providers.md  runtime-invariants.md  tool-authoring.md
examples/01-streaming/: Cargo.toml
examples/01-streaming/src/: main.rs
examples/02-run/: Cargo.toml
examples/02-run/src/: main.rs
examples/03-tools/: Cargo.toml
examples/03-tools/src/: main.rs
examples/04-hitl/: Cargo.toml
examples/04-hitl/src/: main.rs
examples/05-hooks/: Cargo.toml
examples/05-hooks/src/: main.rs
examples/06-session/: Cargo.toml
examples/06-session/src/: main.rs
examples/07-concurrent/: Cargo.toml
examples/07-concurrent/src/: main.rs
examples/08-readonly/: Cargo.toml
examples/08-readonly/src/: main.rs
examples/09-memory/: Cargo.toml
examples/09-memory/src/: main.rs
examples/10-failure-kinds/: Cargo.toml
examples/10-failure-kinds/src/: main.rs
