[workspace]
resolver = "2"
members = [
    "crates/wui-core",
    "crates/wui",
    "crates/wui-eval",
    "crates/wui-macros",
    "crates/wui-mcp",
    "crates/wui-memory",
    "crates/wui-observe",
    "crates/wui-spawn",
    "crates/wui-skills",
    "examples/*",
]

[workspace.package]
version      = "0.1.5"
edition      = "2021"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/Tzuhany/wui"
homepage     = "https://github.com/Tzuhany/wui"
keywords     = ["agent", "llm", "ai", "streaming", "async"]
categories   = ["asynchronous", "api-bindings"]
rust-version = "1.75"
publish      = false

[workspace.dependencies]
# ── Async runtime ─────────────────────────────────────────────
tokio        = { version = "1",   features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util   = { version = "0.7", features = ["rt"] }
futures      = { version = "0.3" }

# ── Serialization ─────────────────────────────────────────────
serde        = { version = "1", features = ["derive"] }
serde_json   = { version = "1" }

# ── Error handling ────────────────────────────────────────────
thiserror    = { version = "2" }
anyhow       = { version = "1" }

# ── Async traits ──────────────────────────────────────────────
async-trait  = { version = "0.1" }

# ── Tracing ───────────────────────────────────────────────────
tracing      = { version = "0.1" }

# ── HTTP (providers) ──────────────────────────────────────────
reqwest            = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
eventsource-stream = { version = "0.2" }

# ── Utils ─────────────────────────────────────────────────────
uuid         = { version = "1", features = ["v4"] }
rand         = { version = "0.8" }

# ── Workspace crates ──────────────────────────────────────────
wui-core     = { path = "crates/wui-core",     version = "0.1.5" }
wui-macros   = { path = "crates/wui-macros",   version = "0.1.0" }
wui-eval     = { path = "crates/wui-eval",     version = "0.1.5" }
wui-memory   = { path = "crates/wui-memory",   version = "0.1.5" }
wui-mcp      = { path = "crates/wui-mcp",      version = "0.1.5" }
wui-observe  = { path = "crates/wui-observe",  version = "0.1.5" }
wui-spawn    = { path = "crates/wui-spawn",    version = "0.1.5" }
wui-skills   = { path = "crates/wui-skills",   version = "0.1.5" }
wui          = { path = "crates/wui",          version = "0.1.5" }
