[package]
name        = "wuhu-compress"
description = "Three-tier context compression pipeline for the Wuhu agent framework."
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
keywords.workspace     = true
categories.workspace   = true
rust-version.workspace = true

[dependencies]
wuhu-core  = { workspace = true }
futures    = { workspace = true }
serde_json = { workspace = true }
tracing    = { workspace = true }
uuid       = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
tokio       = { workspace = true }
