[package]
name        = "wuhu"
description = "A Rust framework for building LLM agents. Streaming, concurrent, graceful."
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
keywords.workspace     = true
categories.workspace   = true
rust-version.workspace = true

[features]
default   = []
anthropic = ["wuhu-providers/anthropic"]
openai    = ["wuhu-providers/openai"]

[dependencies]
wuhu-core      = { workspace = true }
wuhu-engine    = { workspace = true }
wuhu-compress  = { workspace = true }
wuhu-providers = { workspace = true }

anyhow       = { workspace = true }
async-trait  = { workspace = true }
tokio        = { workspace = true }
tokio-stream = { workspace = true }
futures      = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tokio-util   = { workspace = true }
tracing      = { workspace = true }
uuid         = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

# ── Examples (all require the Anthropic provider) ─────────────────────────────
[[example]]
name = "simple"
required-features = ["anthropic"]

[[example]]
name = "with_tools"
required-features = ["anthropic"]

[[example]]
name = "01_streaming"
required-features = ["anthropic"]

[[example]]
name = "02_run"
required-features = ["anthropic"]

[[example]]
name = "03_tools"
required-features = ["anthropic"]

[[example]]
name = "04_hitl"
required-features = ["anthropic"]

[[example]]
name = "05_hooks"
required-features = ["anthropic"]

[[example]]
name = "06_session"
required-features = ["anthropic"]

[[example]]
name = "07_concurrent"
required-features = ["anthropic"]

[[example]]
name = "08_readonly"
required-features = ["anthropic"]

[[example]]
name = "09_subagent"
required-features = ["anthropic"]

[[example]]
name = "10_failure_kinds"
required-features = ["anthropic"]
