[package]
name        = "wui-eval"
publish.workspace = true
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
keywords.workspace     = true
categories.workspace   = true
rust-version.workspace = true
description = "Evaluation and testing infrastructure for Wui agents"

[dependencies]
wui      = { workspace = true }
wui-core = { workspace = true }

async-trait  = { workspace = true }
futures      = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
tokio        = { workspace = true }
