[package]
name        = "wui-mcp"
publish.workspace = true
description = "MCP (Model Context Protocol) client adapter for the Wui agent framework."
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
keywords.workspace    = true
categories.workspace  = true
rust-version.workspace = true

[dependencies]
wui-core   = { workspace = true }
wui        = { workspace = true }
anyhow      = { workspace = true }
async-trait = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
rmcp        = { version = "1.3.0", features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest"] }

[dev-dependencies]
wui    = { workspace = true, features = ["anthropic"] }
tokio   = { workspace = true }
anyhow  = { workspace = true }
futures = { workspace = true }

[[example]]
name = "01_mcp"
