[package]
name        = "wui-memory"
publish.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Optional memory capabilities for the Wui runtime"

[dependencies]
async-trait = { workspace = true }
anyhow      = { workspace = true }
futures     = { workspace = true }
serde       = { workspace = true, features = ["derive"] }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
tokio-util  = { workspace = true }
uuid        = { workspace = true }
wui-core   = { workspace = true }
