[package]
name        = "wui-observe"
publish.workspace = true
description = "Observability for Wui agent runs: timeline, spans, and OTel integration."
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
keywords.workspace    = true
categories.workspace  = true
rust-version.workspace = true

[dependencies]
wui-core   = { workspace = true }
futures     = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
wui  = { workspace = true, features = ["anthropic"] }
