[package]
name    = "example-01-streaming"
version = "0.0.0"
edition = "2021"
publish = false


[dependencies]
wui        = { workspace = true, features = ["anthropic"] }
tokio       = { workspace = true }
futures     = { workspace = true }
async-trait = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
