[package]
name    = "example-09-memory"
version = "0.0.0"
edition = "2021"
publish = false


[dependencies]
wui        = { workspace = true, features = ["anthropic"] }
wui-memory = { workspace = true }
tokio       = { workspace = true }
futures     = { workspace = true }
async-trait = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
